Custom --vh to fix mobile browser jump behind bottom nav

--- a/src/Components/PlacesPanel/PlacesPanel.scss
+++ b/src/Components/PlacesPanel/PlacesPanel.scss
@@ -1,7 +1,6 @@
 div.places-container {
-  position: fixed;
-  top: 72px;
-  left: 10px;
+  // height: 100%;
+  margin: 0 0 0 10px;
   z-index: 1;
 
   display: flex;
@@ -11,49 +10,24 @@ div.places-container {
 
   div.places-panel {
     position: relative;
-    overflow: hidden;
+    overflow-y: scroll;
 
-    max-height: calc(100vh - 166px);
+    height: 100%;
     background-color: var(--color-bg);
     border-radius: 24px;
     margin-bottom: 10px;
     box-shadow: var(--shadow-controls);
-    transition: all 0.3s ease-in-out;
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     &.minimized {
-      max-height: 0px;
+      height: 0px;
       box-shadow: none;
-      margin: 0;
-    }
-
-    .fade-top {
-      pointer-events: none;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100px;
-      border-radius: 24px 24px 0 0;
-      opacity: 0;
-      transition: opacity 0.6s ease-in-out;
-      background: linear-gradient(
-        to bottom,
-        var(--color-bg) 0%,
-        transparent 100%
-      );
-      z-index: 2;
-    }
-
-    .fade-bottom {
-      pointer-events: none;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 100px;
-      border-radius: 0 0 24px 24px;
-      opacity: 0;
-      transition: opacity 0.6s ease-in-out;
-      background: linear-gradient(to top, var(--color-bg) 0%, transparent 100%);
-      z-index: 2;
+      margin-bottom: 0;
     }
 
     div.place-item,
@@ -80,18 +54,9 @@ div.places-container {
     }
 
     div.places {
-      max-height: calc(100vh - 166px);
-
+      height: 100%;
       background-color: var(--color-bg);
       border-radius: 24px;
-
-      overflow-y: scroll;
-
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
-      &::-webkit-scrollbar {
-        display: none;
-      }
 
       div.place-item {
         background-color: var(--color-card);
