--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,12 @@
 
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+
+  position: fixed;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,6 +17,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 20px;
   color: var(--color-text);
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 code {
